# wp-ss

./: de-schedule.bat  pyproject.toml  schedule.bat  test-config.toml
src/wpss/: core.py  core.pyi  main.py
