[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wpss"
version = "0.1.0"
description = "Take Screenshot of Whatsapp Web"
requires-python = ">=3.8"
dependencies = ['pillow', 'pyautogui', 'psutil', 'pygetwindow', 'argpi', 'toml']

[project.scripts]
wpss = 'wpss.main:main'
wpss_normal = 'wpss:main:main_normal'
wpss_bulk = 'wpss:main:main_bulk'